# rag-chatbot

./: Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
backend/: cli.py
backend/app/: deps.py  main.py
backend/app/routers/: admin.py  chat.py
backend/app/services/: index_builder.py  manifest.py  watcher.py
backend/tests/: test_chat.py
infra/: Dockerfile  docker-compose.yml
