[project]
name = "rag-chatbot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=1.0.0",
    "uvicorn[standard]",
    "langchain>=0.2.0",
    "chromadb",
    "watchdog",
    "apscheduler",
    "python-dotenv",
    "httpx",
]

[project.optional-dependencies]
test = ["pytest"]
lint = ["ruff", "bandit"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-ra"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
